# serializer version: 1
# name: test_HAT_3x
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=83237740,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_HAT_4x
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=83090028,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_HAT_L_4x
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=163386300,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'large',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_HAT_S_2x
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=37893884,
    output_channels=3,
    purpose='SR',
    scale=2,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_HAT_S_3x
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=38632444,
    output_channels=3,
    purpose='SR',
    scale=3,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_HAT_S_4x
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=38484732,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_HAT_community1
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=83090028,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'medium',
      's64w16',
      '64nf',
      '180dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
# name: test_HAT_community2
  ImageModelDescriptor(
    architecture=HATArch(
      id='HAT',
      name='HAT',
    ),
    input_channels=3,
    bytes=38484732,
    output_channels=3,
    purpose='SR',
    scale=4,
    size_requirements=SizeRequirements(minimum=16, multiple_of=1, square=False),
    supports_bfloat16=True,
    supports_half=False,
    tags=list([
      'small',
      's64w16',
      '64nf',
      '144dim',
      '1conv',
    ]),
    tiling=<ModelTiling.SUPPORTED: 1>,
  )
# ---
